plugins {
	id 'org.springframework.boot' version '2.3.9.RELEASE'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	set('springCloudVersion', "Hoxton.SR10")
	set('springBootAdminVersion', "2.3.1")
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.cloud:spring-cloud-starter-oauth2'

	implementation 'org.springframework.boot:spring-boot-starter-web'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	runtimeOnly 'org.postgresql:postgresql'

	implementation 'org.springframework.cloud:spring-cloud-starter-config'

	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
	implementation 'de.codecentric:spring-boot-admin-starter-client'

	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'

	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache', version: '2.5.0'

	implementation 'org.springframework.boot:spring-boot-starter-activemq'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	compile group: 'com.vladmihalcea', name: 'hibernate-types-52', version: '1.0.0'

	testCompile 'org.junit.jupiter:junit-jupiter-api:5.3.0'
	testCompile 'org.junit.jupiter:junit-jupiter-params:5.3.0'
	testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.3.0'
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
	testImplementation 'org.springframework.security:spring-security-test'

	testCompile "org.testcontainers:testcontainers:1.14.1"
	testImplementation 'org.testcontainers:postgresql:1.14.1'
	testImplementation 'org.junit.platform:junit-platform-runner'

	testImplementation group: 'org.apache.activemq.tooling', name: 'activemq-junit', version: '5.13.1'
	implementation group: 'org.apache.activemq', name: 'activemq-broker', version: '5.13.1'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
		mavenBom "de.codecentric:spring-boot-admin-dependencies:${springBootAdminVersion}"
	}
}

bootJar {
	layered()
}

test {
	jvmArgs '--enable-preview'
	useJUnitPlatform()
}